--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "getafinance---control-inteligente",
+  "name": "finanzas-brisa",
   "private": true,
   "version": "0.0.0",
   "type": "module",
